--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -22,6 +24,7 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
@@ -45,5 +48,8 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.14.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
